Fixed footer overflowing view

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,8 +1,10 @@
 .footer {
   display: block;
   margin: 2em 0;
+  padding-top: 2em;
   font-size: .85rem;
   line-height: 1.5rem;
+  border-top: solid 1px #e8e8e8;
 
   a {
     text-decoration: none;
